# PeakRDL-uvm

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
examples/: defined_udps.rdl  readme.txt  tru_cfg.rdl  tru_cfg_uvm_pkg.sv  tru_registers_uvm.sv  uvm_parser.py
examples/input_files/: readme.txt
examples/output_files/: readme.txt
peakrdl/uvm/: exporter.py  pre_export_listener.py
peakrdl/uvm/templates/: top_include.svh  top_pkg.sv  utils.sv  uvm_reg.sv  uvm_reg_block.sv  uvm_vreg.sv
ralbot/uvmgen/: __init__.py  exporter.py  typemaps.py
src/peakrdl/uvm/: __init__.py
src/peakrdl_uvm/: __about__.py  __init__.py  __peakrdl__.py  exporter.py
src/peakrdl_uvm/templates/: main.sv  top_pkg.sv  uvm_reg.sv  uvm_reg_block-mem.sv  uvm_reg_block.sv  uvm_vreg.sv
test/: .gitignore  generate_testcase_data.py  hwa_wrapper.rdl  pylint.rc  rdl_to_uvm.py  run.sh  test_uvm_gen.py  test_write_enable.rdl  vsim_test.sh
test/testcases/: .gitignore  basic.rdl
