[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-uvm"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "systemrdl-compiler ~= 1.31",
    "jinja2 >= 2.9",
]

authors = [
    {name="Alex Mykyta"},
]
description = "Generate UVM register model from compiled SystemRDL input"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "UVM",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Source = "https://github.com/SystemRDL/PeakRDL-uvm"
Tracker = "https://github.com/SystemRDL/PeakRDL-uvm/issues"
Changelog = "https://github.com/SystemRDL/PeakRDL-uvm/releases"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_uvm.__about__.__version__"}

[project.entry-points."peakrdl.exporters"]
uvm = "peakrdl_uvm.__peakrdl__:Exporter"
